layout issues

--- a/Final Project/final_project_website/css/style.css
+++ b/Final Project/final_project_website/css/style.css
@@ -5,7 +5,9 @@
 }
 
 #cardDisplay {
-	margin; auto;
+	width: 100%;
+	margin-left: 1%;
+	margin-right: 1%;
 }
 
 /* tags */
@@ -59,23 +61,24 @@ footer {
 	border: 1px solid black;
 }
 
-.card {
+.pure-u-1-3 {
 	border: 1px solid black;
-	margin: 10px;
 	display: inline-block;
-	width: 30%;
 	height: 200px;
-	margin-left: 1%;
-	margin-right: 1%;
+	width: 31%;
+	padding: 10px 10px;
 }
 
 .heroImage {
 	border: 1px solid black;
 	margin: 20px;
 	text-align: center;
+	height: 300px;
 }
 
 .pure-button-primary {
-	width: 200px;
-	position: center;
+	width: 70%;
+	margin: 20px;
 }
+
+/* media queries */
